# McChallonge

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy-lambda.yml  deploy-site.yml  infra.yml
deploy/nginx/: mcchallonge.conf
deploy/systemd/: mcchallonge.service
docs/: serverless-s3-terraform-github-actions.md
infra/terraform/: README.md
infra/terraform/envs/prod/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
mcchallonge/: .env.example  README.md  __init__.py  app.py  config.py  pyproject.toml
mcchallonge/cli/: __init__.py  bulk_add_participants.py  challonge_oauth_cli.py  generate_dashboard.py
mcchallonge/lambda_handlers/: update_data.py
mcchallonge/models/: match.py  participant.py  tournament.py
mcchallonge/services/: __init__.py  challonging.py  local_cache.py  oauth_client.py  participant_images.py  static_generator.py  templating.py  think.py  underway_banners.py
mcchallonge/tests/: test_app_endpoints.py  test_cli.py  test_data_mocks.py  test_highest_level.py  test_integration_challonging.py  test_monorepo_integration.py  test_participant_images.py  test_unit_challonging.py
mcchallonge/web/static/css/: tournament_dashboard.css
mcchallonge/web/static/js/: tournament_dashboard_client.js  underway.js
mcchallonge/web/static/js/tournament_dashboard/: api.js  builders.js  dashboard.js  data.js  events.js  filters.js  helpers.js  main.js  renderers.js  round-metadata.js  search-chips.js  search-mode.js  state.js
mcchallonge/web/templates/: new_main_table.jinja.html  queue.jinja.html  tournament_dashboard.jinja.html  underway.jinja.html
mcchallonge/web/templates/partials/: _dashboard_footer.jinja.html  _dashboard_header.jinja.html  _dashboard_macros.jinja.html  _event_details_card.jinja.html  _matches_section.jinja.html  _participants_section.jinja.html
mcrobotcombatevents/: README.md  pyproject.toml
mcrobotcombatevents/src/mcrobotcombatevents/: __init__.py  cli.py  client.py  models.py  parser.py  workflow.py
mcrobotcombatevents/tests/: test_parser.py  test_workflow.py
rce2sheet/: .env.example  README.md  pyproject.toml
rce2sheet/src/rce2sheet/: __init__.py  cli.py  models.py  reader.py  sheets.py  workflow.py
rce2sheet/tests/: test_rce2sheet.py  test_reader.py  test_sheets_token_storage.py
scripts/: orchestrate_phase1.py  orchestrate_phase2.py
src/: __init__.py  requirements.txt
src/models/: __init__.py  match.py  pilot.py  tournament.py
src/services/: __init__.py  challonge.py  challonging.py  packager.py  templater.py  think.py
src/tests/: __init__.py  test_highest_level.py
src/web/static/: new_main_table_styles.css
src/web/statics/: style.css
src/web/templates/: index.html  leaderboard.html  leaderboard_data.html  main_table.jinja.html  new_main_table.jinja.html  separate_table.jinja.html  var_list  versus.html  versus_data.html
