[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcchallonge"
version = "0.1.0"
description = "A Python package for interacting with Challonge API and generating tournament visualizations"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "AutoMcG"}
]

[project.urls]
Homepage = "https://github.com/AutoMcG/McChallonge"
Repository = "https://github.com/AutoMcG/McChallonge"
