[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcrobotcombatevents"
version = "0.1.0"
description = "Scrape Robot Combat Events pages into structured JSON"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "AutoMcG"}
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
rce-export = "mcrobotcombatevents.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
