[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rce2sheet"
version = "0.1.0"
description = "Create a Google Sheet from an mcrobotcombatevents JSON export"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AutoMcG" }]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.1.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
rce2sheet = "rce2sheet.cli:main"
rce2sheet-read = "rce2sheet.reader:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
